# api-cplusplus

./: .clang-format  .gitignore  CMakeLists-template-linux.txt  CMakeLists-template-win32.txt  CMakeLists-template-win64.txt  CMakeSettings.json  README.md
config/: md_to_dolphindb_config.json.template
greatwall/: CMakeLists.txt
greatwall/md_to_dolphindb/: CMakeLists.txt  make.cpp  mdplugin.cc  mdplugin.h
include/: DolphinDB.h
scripts/: linux.sh  vs2015.bat  vs2019.bat  x64_2017.bat  x64_2019.bat
source/pch/: compat_impl.cc  compat_time.cc  compat_time.h
